samples/_failures_safe/1761040213_455118_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c2543969.c: In function ‘main’:
./samples/SAFE/__tmp_c2543969.c:149:15: error: expected ‘)’ at end of input
  149 |     if (strcmp
      |        ~      ^
      |               )
./samples/SAFE/__tmp_c2543969.c:149:5: error: expected declaration or statement at end of input
  149 |     if (strcmp
      |     ^~
